--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 
 <head>
     <title>Kassensystem</title>
+    <script src="http://localhost:8001/getData"></script>
+    <script src="http://localhost:8001/setdata"></script>
+    <form method='post'>
+        <input type='text' name='username'>
+        <input type='submit'>
+    </form> 
 </head>
 
 <body>
-    <textarea id="textarea1" rows="5" cols="20" readonly></textarea>
+    <textarea id="textarea1" rows="5" cols="20" style=" border:0.5px solid blue;" readonly></textarea>
 
-    <canvas id='canvas1' width='800px' height='600px' style=" border:2px solid #002fff;"></canvas>
+    <canvas id='canvas1' width='800px' height='600px' style=" border:2px solid #000000;"></canvas>
     <script src='js/draw.js'></script>
-    <script src='js/All.js'></script>
+    <!--<script src='js/All.js'></script>-->
 
 </body>
+    
 
 </html>
