--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <!--<textarea id="textarea1" rows="5" cols="20" style=" border:0.5px solid blue;" readonly></textarea>-->
     <table>
         <tr>
-    <th><canvas id='canvas1' width='800px' height='600px' style=" border:2px solid #000000;"></canvas></th>
-    <th ><canvas id='canvas2' width='400px' height='500px' style=" border:3px solid #740aff;"></canvas>
-    <canvas id='canvas3' width='400px' height='100px' style=" border:3px solid #061672; background-color: #242424;"></canvas></th>
-    <th style="padding-top: 300px;padding-right:400px ;"><canvas id='canvas4' width='400px' height='300px' style=" border:2px solid #000000;"></canvas></th>
-    <script src='js/draw.js'></script>
-    <script src='js/All.js'></script>
+            <th><canvas id='canvas1' width='800px' height='600px' style=" border:2px solid #000000;"></canvas></th>
+            <th><canvas id='canvas2' width='400px' height='500px' style=" border:3px solid #740aff;"></canvas>
+                <canvas id='canvas3' width='400px' height='100px' style=" border:3px solid #061672; background-color: #242424;"></canvas></th>
+            <th style="padding-right:400px ;"><canvas id='canvas5' width='400px' height='300px' style=" border:2px solid #000000;"></canvas><canvas id='canvas4' width='400px' height='300px' style=" border:2px solid #000000;"></canvas></th>
+            <script src='js/draw.js'></script>
+            <script src='js/All.js'></script>
         </tr>
     </table>
 
