Projekt Ver1 mit Quellen

--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
+    <meta charset="UTF-8">
     <title>Kassensystem</title>
     <script src="http://127.0.0.1:8001/getData"></script>
-    <!--<script src="http://localhost:8001/setdata"></script>
-    <form method='post'>
-        <input type='text' name='username'>
-        <input type='submit'>
-    </form> -->
+  
 </head>
 
 <body>
-    <!--<textarea id="textarea1" rows="5" cols="20" style=" border:0.5px solid blue;" readonly></textarea>-->
+    
     <table>
         <tr>
             <th><canvas id='canvas1' width='800px' height='600px' style=" border:2px solid #000000;"></canvas></th>
@@ -20,7 +17,7 @@
                 <canvas id='canvas3' width='400px' height='100px' style=" border:3px solid #061672; background-color: #242424;"></canvas></th>
             <th style="padding-right:400px ;"><canvas id='canvas5' width='400px' height='300px' style=" border:2px solid #000000;"></canvas><canvas id='canvas4' width='400px' height='300px' style=" border:2px solid #000000;"></canvas></th>
             <script src='js/draw.js'></script>
-            <script src='js/All.js'></script>
+            
         </tr>
     </table>
 
